[package]
name = "rustdds-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
rustdds = "0.7.11"
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "4.0.32", features = ["derive"] }
ctrlc = { version = "3.2.4", features = ["termination"] }
